[package]
name = "esp-tokio-bug"
version = "0.1.0"
authors = ["Florian Köhler <fko@kuptec.de>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"
license = "MIT OR Apache-2.0"

[[bin]]
name = "esp-tokio-bug"
harness = false        # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver",
]

[dependencies]
anyhow = "1.0"
log = { version = "0.4", default-features = false }
esp-idf-hal = "0.44"
esp-idf-svc = { version = "0.49", features = [
    "critical-section",
    "embassy-time-driver",
] }
embassy-time = { version = "0.3", features = ["generic-queue"] }
async-io-mini = { git = "https://github.com/ivmarkov/async-io-mini.git" }
edge-executor = "0.4.1"
edge-nal-std = { package = "edge-nal-std", git = "https://github.com/ivmarkov/edge-net.git", features = [
    "async-io-mini",
] }
edge-nal = { package = "edge-nal", git = "https://github.com/ivmarkov/edge-net.git" }
edge-http = { package = "edge-http", git = "https://github.com/ivmarkov/edge-net.git", features = [
    "std",
] }

[build-dependencies]
embuild = "0.32.0"
